[package]
name = "babygiant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-ed-on-bn254 = "0.2.0"
ark-std = "0.2.0"
hex = "0.4.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde-wasm-bindgen = "0.5"
regex = "1.10.2"